2008-05-19  Andy Buckley  <andy@insectnation.org>

	* Removed unused HepML reference files.

	* Added error handling for requested analyses with wrong case
	convention / missing name.

2008-05-15  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New analysis PDG_Hadron_Multiplicities

	* flat2aida converter

2008-05-15  Andy Buckley  <andy@insectnation.org>

	* Removed unused mysterious Perl scripts!

	* Added RivetGun.HepMC logging of HepMC event details.

2008-05-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New analysis DELPHI_1995_S3137023. This analysis contains
	the xp spectra of Xi+- and Sigma(1385)+-.

2008-05-13  Andy Buckley  <andy@insectnation.org>

	* Improved logging interface: log levels are now integers (for
	cross-library compatibility and level setting also applies to
	existing loggers.

2008-05-09  Andy Buckley  <andy@insectnation.org>

	* Improvements to robustness of ROOT checks.

	* Added --version flag on config scripts and rivetgun.

2008-05-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* New UnstableFinalState projection which selects all hadrons,
	leptons and real photons including unstable particles.

	* In the DELPHI_1996_S3430090 analysis the multiplicities for
	pi+/pi- and p0 are filled, using the UnstableFinalState projection.

2008-05-06  Andy Buckley  <andy@insectnation.org>

	* FastJets projection now protects against the case where no
	particles exist in the final state (where FastJet throws an
	exception).

	* AIDA file writing is now separated from the
	AnalysisHandler::finalize method... API users can choose what to
	do with the histo objects, be that writing out or further
	processing.

2008-04-29  Andy Buckley  <andy@insectnation.org>

	* Increased default tolerances in floating point comparisons as
	they were overly stringent and valid f.p. precision errors were
	being treated as significant.

	* Implemented remainder of Acosta UE analysis.

	* Added proper getEtSum() to Jet.

	* Added Et2() member and function to FourMomentum.
