@@ -1,31 +1,35 @@
 nobase_dist_data_DATA = \
-  Rivet/ALEPH_1991_S2435284.aida  Rivet/ALEPH_1991_S2435284.hep.xml  \
-  Rivet/DELPHI_1994_S3021912.aida Rivet/DELPHI_1994_S3021912.aida    \
-  Rivet/DELPHI_1995_S3137023.aida Rivet/DELPHI_1995_S3137023.aida    \
-  Rivet/DELPHI_1996_S3430090.aida Rivet/DELPHI_1996_S3430090.hep.xml \
-  Rivet/OPAL_2004_S6132243.aida   Rivet/OPAL_2004_S6132243.hep.xml   \
-  Rivet/OPAL_1998_S3780481.aida   Rivet/OPAL_1998_S3780481.hep.xml   \
-  Rivet/H1_1995_S3167097.aida     Rivet/H1_1995_S3167097.hep.xml     \
-  Rivet/ZEUS_2001_S4815815.aida   Rivet/ZEUS_2001_S4815815.hep.xml   \
-  Rivet/CDF_2001_S4751469.aida    Rivet/CDF_2001_S4751469.hep.xml    \
-  Rivet/CDF_2004_S5839831.aida    Rivet/CDF_2004_S5839831.hep.xml    \
-  Rivet/CDF_2005_S6217184.aida    Rivet/CDF_2005_S6217184.hep.xml    \
-  Rivet/CDF_2006_S6653332.aida    Rivet/CDF_2006_S6653332.hep.xml    \
-  Rivet/CDF_2007_S7057202.aida    Rivet/CDF_2007_S7057202.hep.xml    \
-  Rivet/CDF_2008_S7541902.aida    Rivet/CDF_2008_S7541902.hep.xml    \
-  Rivet/D0_2001_S4674421.aida     Rivet/D0_2001_S4674421.hep.xml     \
-  Rivet/D0_2004_S5992206.aida     Rivet/D0_2004_S5992206.hep.xml     \
-  Rivet/PDG_Hadron_Multiplicities.aida                               \
+  Rivet/ALEPH_1991_S2435284.aida       \
+  Rivet/DELPHI_1994_S3021912.aida      \
+  Rivet/DELPHI_1995_S3137023.aida      \
+  Rivet/DELPHI_1996_S3430090.aida      \
+  Rivet/OPAL_2004_S6132243.aida        \
+  Rivet/OPAL_1998_S3780481.aida        \
+  Rivet/H1_1995_S3167097.aida          \
+  Rivet/ZEUS_2001_S4815815.aida        \
+  Rivet/CDF_2001_S4751469.aida         \
+  Rivet/CDF_2004_S5839831.aida         \
+  Rivet/CDF_2005_S6217184.aida         \
+  Rivet/CDF_2006_S6653332.aida         \
+  Rivet/CDF_2007_S7057202.aida         \
+  Rivet/CDF_2008_S7541902.aida         \
+  Rivet/D0_2001_S4674421.aida          \
+  Rivet/D0_2004_S5992206.aida          \
+  Rivet/PDG_Hadron_Multiplicities.aida \
   Rivet/FPythiaLEP10.hepmc
 
 nobase_dist_data_DATA += \
   RivetGun/ccpythia-default.params \
   RivetGun/falpher-default.params  \
   RivetGun/falppyt-default.params  \
-  RivetGun/fherwig-default.params RivetGun/fherwig-qcd.params  \
-  RivetGun/fpythia-default.params RivetGun/fpythia-hadronic.params \
+  RivetGun/fherwig-default.params  \
+  RivetGun/fherwig-qcd.params      \
+  RivetGun/fpythia-default.params  \
+  RivetGun/fpythia-hadronic.params \
+  RivetGun/fpythia-atlaspdf.params \
   RivetGun/charybdisher-default.params  \
   RivetGun/charybdispyt-default.params  \
   RivetGun/lep1.params \
-  RivetGun/tevatron1800.params RivetGun/tevatron630.params \
+  RivetGun/tevatron630.params  \
+  RivetGun/tevatron1800.params \
   RivetGun/lhc.params
